editor-window.ui: Make "View" button tooltip more clear
Currently, the tooltip of this button is just "View". However, this isn't very clear.

This commit changes the tooltip text to "View Options".

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -121,7 +121,7 @@
                 </child>
                 <child>
                   <object class="GtkMenuButton" id="options_menu">
-                    <property name="tooltip-text" translatable="yes">View</property>
+                    <property name="tooltip-text" translatable="yes">View Options</property>
                     <property name="icon-name">document-properties-symbolic</property>
                     <property name="menu-model">options_menu_model</property>
                     <accessibility>
