--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -131,6 +131,7 @@
                 </child>
                 <child>
                   <object class="GtkMenuButton" id="primary_menu">
+                    <property name="tooltip-text" translatable="yes">Main Menu</property>
                     <property name="icon-name">open-menu-symbolic</property>
                     <property name="menu-model">primary_menu_model</property>
                     <accessibility>
