editor-open-popover: Add tooltip text for the "Open" button
The "Open" button doesn't have a label and doesn't show any tooltip.

This commit adds a tooltip for this button.

--- a/src/editor-open-popover.ui
+++ b/src/editor-open-popover.ui
@@ -35,6 +35,7 @@
             </child>
             <child>
               <object class="GtkButton">
+                <property name="tooltip-text">Open New Document</property>
                 <property name="icon-name">document-open-symbolic</property>
                 <property name="action-name">win.open</property>
               </object>
