help-overlay: Fix newly added three shortcuts

--- a/src/help-overlay.ui
+++ b/src/help-overlay.ui
@@ -333,19 +333,19 @@
             <property name="title" translatable="yes" context="shortcut window">General</property>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="accelerator">win.show-preferences</property>
+                <property name="accelerator">&lt;ctrl&gt;comma</property>
                 <property name="title" translatable="yes" context="shortcut window">Show preferences</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="accelerator">win.alternate-help-overlay</property>
+                <property name="accelerator">&lt;ctrl&gt;question</property>
                 <property name="title" translatable="yes" context="shortcut window">Show keyboard shortcuts</property>
               </object>
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="accelerator">app.help</property>
+                <property name="accelerator">F1</property>
                 <property name="title" translatable="yes" context="shortcut window">Show help</property>
               </object>
             </child>
