--- a/src/editor-search-bar.ui
+++ b/src/editor-search-bar.ui
@@ -45,7 +45,7 @@
               <class name="linked"/>
             </style>
             <child>
-              <object class="GtkButton">
+              <object class="GtkButton" id="move_previous">
                 <property name="action-name">search.move-previous</property>
                 <property name="action-target">false</property>
                 <property name="tooltip-text" translatable="yes">Move to previous match (Ctrl+Shift+G)</property>
@@ -53,7 +53,7 @@
               </object>
             </child>
             <child>
-              <object class="GtkButton">
+              <object class="GtkButton" id="move_next">
                 <property name="action-name">search.move-next</property>
                 <property name="action-target">false</property>
                 <property name="tooltip-text" translatable="yes">Move to next match (Ctrl+G)</property>
