window: update view menu wording
Fixes #438

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -269,18 +269,16 @@ Or, press Ctrl+W to close the window.</property>
   </menu>
   <menu id="options_menu_model">
     <section>
-      <attribute name="label" translatable="yes">Show</attribute>
       <item>
-        <attribute name="label" translatable="yes">_Line Numbers</attribute>
+        <attribute name="label" translatable="yes">Show _Line Numbers</attribute>
         <attribute name="action">settings.show-line-numbers</attribute>
       </item>
       <item>
-        <attribute name="label" translatable="yes">_Right Margin</attribute>
+        <attribute name="label" translatable="yes">Show _Right Margin</attribute>
         <attribute name="action">settings.show-right-margin</attribute>
       </item>
     </section>
     <section>
-      <attribute name="label" translatable="yes">Indentation</attribute>
       <item>
         <attribute name="label" translatable="yes">_Automatic Indentation</attribute>
         <attribute name="action">settings.auto-indent</attribute>
