window: update various menu items and tooltips

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -135,7 +135,7 @@
                     <property name="icon-name">open-menu-symbolic</property>
                     <property name="menu-model">primary_menu_model</property>
                     <accessibility>
-                      <property name="label" translatable="yes">Menu</property>
+                      <property name="label" translatable="yes">Main menu</property>
                     </accessibility>
                   </object>
                 </child>
@@ -237,7 +237,7 @@ Or, press Ctrl+W to close the window.</property>
       </item>
       <item>
         <attribute name="id">print</attribute>
-        <attribute name="label" translatable="yes">_Print</attribute>
+        <attribute name="label" translatable="yes">_Print…</attribute>
         <attribute name="action">page.print</attribute>
         <attribute name="accel">&lt;control&gt;p</attribute>
       </item>
