--- a/src/editor-theme-selector.ui
+++ b/src/editor-theme-selector.ui
@@ -19,7 +19,7 @@
             <property name="focus-on-click">false</property>
             <property name="action-name">settings.style-variant</property>
             <property name="action-target">'follow'</property>
-            <property name="tooltip-text" translatable="yes">Follow system style</property>
+            <property name="tooltip-text" translatable="yes">Follow System Style</property>
             <accessibility>
               <property name="label" translatable="yes">Follow system style</property>
             </accessibility>
@@ -36,7 +36,7 @@
             <property name="focus-on-click">false</property>
             <property name="action-name">settings.style-variant</property>
             <property name="action-target">'light'</property>
-            <property name="tooltip-text" translatable="yes">Light style</property>
+            <property name="tooltip-text" translatable="yes">Light Style</property>
             <accessibility>
               <property name="label" translatable="yes">Light style</property>
             </accessibility>
@@ -54,7 +54,7 @@
             <property name="focus-on-click">false</property>
             <property name="action-name">settings.style-variant</property>
             <property name="action-target">'dark'</property>
-            <property name="tooltip-text" translatable="yes">Dark style</property>
+            <property name="tooltip-text" translatable="yes">Dark Style</property>
             <accessibility>
               <property name="label" translatable="yes">Dark style</property>
             </accessibility>
