--- a/src/editor-open-popover.ui
+++ b/src/editor-open-popover.ui
@@ -55,15 +55,15 @@
             <child>
               <object class="GtkBox" id="empty">
                 <property name="orientation">vertical</property>
-                <property name="spacing">18</property>
+                <property name="spacing">24</property>
                 <property name="margin-start">6</property>
                 <property name="margin-top">36</property>
                 <property name="margin-bottom">36</property>
                 <property name="margin-end">6</property>
                 <child>
                   <object class="GtkImage">
-                    <property name="icon-name">text-x-generic-symbolic</property>
-                    <property name="pixel-size">64</property>
+                    <property name="icon-name">document-open-recent-symbolic</property>
+                    <property name="pixel-size">96</property>
                     <style>
                       <class name="dim-label"/>
                     </style>
@@ -74,7 +74,7 @@
                     <property name="label" translatable="yes">No Recent Documents</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
-                      <attribute name="scale" value="1.1"/>
+                      <attribute name="scale" value="1.4"/>
                     </attributes>
                   </object>
                 </child>
