help-overlay: Remove redundant "Editor Shortcuts" string

--- a/src/help-overlay.ui
+++ b/src/help-overlay.ui
@@ -6,7 +6,7 @@
     <child>
       <object class="GtkShortcutsSection">
         <property name="section-name">editor</property>
-        <property name="title" translatable="yes" context="shortcut window">Editor Shortcuts</property>
+        <property name="max-height">15</property>
         <child>
           <object class="GtkShortcutsGroup">
             <property name="title" translatable="yes" context="shortcut window">Windows</property>
