help: track string changes
Fixes #544

--- a/help/C/basics-open-file.page
+++ b/help/C/basics-open-file.page
@@ -11,7 +11,7 @@
   </title>
 
   <p>To open a file in GNOME Text Editor use <gui style="button">Open</gui> in the Headerbar
-  and <gui>Browse Files...</gui> or the shortcut <keyseq><key>Ctrl</key><key>O</key></keyseq>.
+  and <gui>Open New Document</gui> or the shortcut <keyseq><key>Ctrl</key><key>O</key></keyseq>.
   </p>
 
   <p>In the dialog choose your file(s) you want to open and click <gui>Open</gui>.
