doc: Use Main Menu instead of Hamburger Menu

--- a/help/C/edit-search-and-replace.page
+++ b/help/C/edit-search-and-replace.page
@@ -42,7 +42,7 @@
 
   <list>
     <title>Search for text</title>
-    <item><p>Activate the search panel via <guiseq><gui>Hamburger Menu</gui><gui>Find/Replace...</gui></guiseq> or activate it via <keyseq><key>Ctrl</key><key>F</key></keyseq>.</p></item>
+    <item><p>Activate the search panel via <guiseq><gui>Main Menu</gui><gui>Find/Replace...</gui></guiseq> or activate it via <keyseq><key>Ctrl</key><key>F</key></keyseq>.</p></item>
     <item><p>Add your search term into the entry field.</p></item>
     <item><p>The search is performed as you type. You can now iterate the search result with <key>↑</key> or <key>↓</key> or with the buttons beside the entry.</p></item>
     <item><p>Pressing <key>Enter</key> will move the cursor to the currently highlighted search result.</p></item>
@@ -63,8 +63,8 @@
 
   <list>
     <title>Replace text</title>
-    <item><p>Activate the search panel via <guiseq><gui>Hamburger Menu</gui><gui>Find/Replace...</gui></guiseq> or activate it via <keyseq><key>Ctrl</key><key>H</key></keyseq>.</p></item>
-    <item><p>In case you opened the search panel via the <gui>Hamburger Menu</gui> you have to click the button for activating the replace functionality.</p></item>
+    <item><p>Activate the search panel via <guiseq><gui>Main Menu</gui><gui>Find/Replace...</gui></guiseq> or activate it via <keyseq><key>Ctrl</key><key>H</key></keyseq>.</p></item>
+    <item><p>In case you opened the search panel via the <gui>Main Menu</gui> you have to click the button for activating the replace functionality.</p></item>
     <item><p>Add your search term which should be replaced into the entry field.</p></item>
     <item><p>Add your replace term into the second entry field.</p></item>
     <item><p>The search is performed as you type. You can now iterate the search result with <key>↑</key> or <key>↓</key> or with the buttons beside the entry.</p></item>
