--- a/help/C/edit-undo-redo.page
+++ b/help/C/edit-undo-redo.page
@@ -74,7 +74,7 @@
     <title>Discarding all changes since last save</title>
     <p>
       <guiseq>
-        <gui>Menu</gui>
+        <gui>Main Menu</gui>
         <gui>Discard Changes</gui>
       </guiseq>
       will permanently discard all changes made to a file since it was last 
