--- a/src/editor-properties-dialog.ui
+++ b/src/editor-properties-dialog.ui
@@ -32,9 +32,7 @@
                   <object class="GtkLabel" id="name">
                     <property name="hexpand">true</property>
                     <property name="xalign">1</property>
-                    <property name="ellipsize">none</property>
-                    <property name="wrap">true</property>
-                    <property name="wrap-mode">word-char</property>
+                    <property name="ellipsize">start</property>
                     <property name="use-markup">true</property>
                   </object>
                 </child>
@@ -47,9 +45,7 @@
                   <object class="GtkLabel" id="location">
                     <property name="hexpand">true</property>
                     <property name="xalign">1</property>
-                    <property name="ellipsize">none</property>
-                    <property name="wrap">true</property>
-                    <property name="wrap-mode">word-char</property>
+                    <property name="ellipsize">start</property>
                     <property name="use-markup">true</property>
                     <signal name="activate-link" handler="activate_link_cb" swapped="true"/>
                   </object>
