--- a/src/editor-open-popover.ui
+++ b/src/editor-open-popover.ui
@@ -76,6 +76,9 @@
                       <attribute name="weight" value="bold"/>
                       <attribute name="scale" value="1.4"/>
                     </attributes>
+                    <style>
+                      <class name="dim-label"/>
+                    </style>
                   </object>
                 </child>
               </object>
