editor-preferences-dialog: Set a minimum size for the Preferences dialog
This prevents this dialog from being shrunk to a really small size.

https://developer.gnome.org/hig/guidelines/adaptive.html

--- a/src/editor-preferences-dialog.ui
+++ b/src/editor-preferences-dialog.ui
@@ -5,6 +5,8 @@
   <requires lib="GtkSource" version="5.0"/>
   <template class="EditorPreferencesDialog" parent="AdwPreferencesWindow">
     <property name="default-height">700</property>
+    <property name="width-request">360</property>
+    <property name="height-request">294</property>
     <style>
       <class name="org-gnome-TextEditor"/>
       <class name="preferences"/>
