editor-open-popover: Remove kbd shortcut from "Open New Document" tooltip
Follow-up from https://gitlab.gnome.org/GNOME/gnome-text-editor/-/merge_requests/108

--- a/src/editor-open-popover.ui
+++ b/src/editor-open-popover.ui
@@ -36,7 +36,7 @@
             </child>
             <child>
               <object class="GtkButton">
-                <property name="tooltip-text" translatable="yes">Open New Document (Ctrl+O)</property>
+                <property name="tooltip-text" translatable="yes">Open New Document</property>
                 <property name="icon-name">document-open-symbolic</property>
                 <property name="action-name">win.open</property>
               </object>
