--- a/src/editor-preferences-dialog.ui
+++ b/src/editor-preferences-dialog.ui
@@ -56,7 +56,8 @@
           <object class="AdwPreferencesGroup">
             <child>
               <object class="AdwExpanderRow">
-                <property name="title" translatable="yes">Custom Font</property>
+                <property name="title" translatable="yes">Custom _Font</property>
+                <property name="use-underline">true</property>
                 <property name="expanded" bind-source="use_custom_font" bind-property="active" bind-flags="sync-create|bidirectional"/>
                 <child type="action">
                   <object class="GtkSwitch" id="use_custom_font">
@@ -78,19 +79,22 @@
           <object class="AdwPreferencesGroup">
             <child>
               <object class="EditorPreferencesSwitch" id="grid">
-                <property name="title" translatable="yes">Display Grid Pattern</property>
+                <property name="title" translatable="yes">Display _Grid Pattern</property>
+                <property name="use-underline">true</property>
                 <property name="schema-key">show-grid</property>
               </object>
             </child>
             <child>
               <object class="EditorPreferencesSwitch" id="highlight_current_line">
-                <property name="title" translatable="yes">Highlight Current Line</property>
+                <property name="title" translatable="yes">_Highlight Current Line</property>
+                <property name="use-underline">true</property>
                 <property name="schema-key">highlight-current-line</property>
               </object>
             </child>
             <child>
               <object class="EditorPreferencesSwitch" id="map">
-                <property name="title" translatable="yes">Display Overview Map</property>
+                <property name="title" translatable="yes">Display _Overview Map</property>
+                <property name="use-underline">true</property>
                 <property name="schema-key">show-map</property>
               </object>
             </child>
@@ -101,7 +105,8 @@
             <property name="title" translatable="yes">Right Margin</property>
             <child>
               <object class="EditorPreferencesSpin" id="right_margin">
-                <property name="title" translatable="yes">Margin Position</property>
+                <property name="title" translatable="yes">_Margin Position</property>
+                <property name="use-underline">true</property>
                 <property name="schema-key">right-margin-position</property>
               </object>
             </child>
@@ -112,14 +117,16 @@
             <property name="title" translatable="yes">Behavior</property>
             <child>
               <object class="EditorPreferencesSwitch" id="discover">
-                <property name="title" translatable="yes">Discover Document Settings</property>
+                <property name="title" translatable="yes">_Discover Document Settings</property>
+                <property name="use-underline">true</property>
                 <property name="subtitle" translatable="yes">Apply settings using modelines, editorconfig, or sensible defaults</property>
                 <property name="schema-key">discover-settings</property>
               </object>
             </child>
             <child>
               <object class="AdwExpanderRow">
-                <property name="title" translatable="yes">Restore Session</property>
+                <property name="title" translatable="yes">_Restore Session</property>
+                <property name="use-underline">true</property>
                 <property name="subtitle" translatable="yes">Return to your previous session when Text Editor is started</property>
                 <property name="expanded" bind-source="restore_session" bind-property="active" bind-flags="sync-create|bidirectional"/>
                 <child type="action">
