editor-window: Add ellipsis to the "Document Type" menu item label
"Use an ellipsis (…) at the end of a label if further input or
confirmation is required from the user before the action can be carried out".

https://developer.gnome.org/hig/guidelines/writing-style.html

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -323,7 +323,7 @@ Or, press Ctrl+W to close the window.</property>
         <attribute name="action">settings.spellcheck</attribute>
       </item>
       <item>
-        <attribute name="label" translatable="yes">_Document Type</attribute>
+        <attribute name="label" translatable="yes">_Document Type…</attribute>
         <attribute name="action">page.change-language</attribute>
       </item>
     </section>
