--- a/src/editor-properties-dialog.ui
+++ b/src/editor-properties-dialog.ui
@@ -26,16 +26,11 @@
               <object class="AdwPreferencesGroup">
                 <property name="title" translatable="yes">File</property>
                 <child>
-                  <object class="AdwActionRow">
+                  <object class="AdwActionRow" id="name">
                     <property name="title" translatable="yes">Name</property>
-                    <child type="suffix">
-                      <object class="GtkLabel" id="name">
-                        <property name="hexpand">true</property>
-                        <property name="xalign">1</property>
-                        <property name="ellipsize">start</property>
-                        <property name="use-markup">true</property>
-                      </object>
-                    </child>
+                    <style>
+                      <class name="property"/>
+                    </style>
                   </object>
                 </child>
                 <child>
@@ -58,63 +53,35 @@
               <object class="AdwPreferencesGroup">
                 <property name="title" translatable="yes">Statistics</property>
                 <child>
-                  <object class="AdwActionRow">
+                  <object class="AdwActionRow" id="lines">
                     <property name="title" translatable="yes">Lines</property>
-                    <child type="suffix">
-                      <object class="GtkLabel" id="lines">
-                        <property name="xalign">1</property>
-                        <property name="ellipsize">middle</property>
-                        <property name="label">0</property>
-                        <style>
-                          <class name="numeric"/>
-                        </style>
-                      </object>
-                    </child>
+                    <style>
+                      <class name="property"/>
+                    </style>
                   </object>
                 </child>
                 <child>
-                  <object class="AdwActionRow">
+                  <object class="AdwActionRow" id="words">
                     <property name="title" translatable="yes">Words</property>
-                    <child type="suffix">
-                      <object class="GtkLabel" id="words">
-                        <property name="xalign">1</property>
-                        <property name="ellipsize">middle</property>
-                        <property name="label">0</property>
-                        <style>
-                          <class name="numeric"/>
-                        </style>
-                      </object>
-                    </child>
+                    <style>
+                      <class name="property"/>
+                    </style>
                   </object>
                 </child>
                 <child>
-                  <object class="AdwActionRow">
+                  <object class="AdwActionRow" id="chars">
                     <property name="title" translatable="yes">Characters, No Spaces</property>
-                    <child type="suffix">
-                      <object class="GtkLabel" id="chars">
-                        <property name="xalign">1</property>
-                        <property name="ellipsize">middle</property>
-                        <property name="label">0</property>
-                        <style>
-                          <class name="numeric"/>
-                        </style>
-                      </object>
-                    </child>
+                    <style>
+                      <class name="property"/>
+                    </style>
                   </object>
                 </child>
                 <child>
-                  <object class="AdwActionRow">
+                  <object class="AdwActionRow" id="all_chars">
                     <property name="title" translatable="yes">All Characters</property>
-                    <child type="suffix">
-                      <object class="GtkLabel" id="all_chars">
-                        <property name="xalign">1</property>
-                        <property name="ellipsize">middle</property>
-                        <property name="label">0</property>
-                        <style>
-                          <class name="numeric"/>
-                        </style>
-                      </object>
-                    </child>
+                    <style>
+                      <class name="property"/>
+                    </style>
                   </object>
                 </child>
               </object>
