--- a/src/editor-properties-dialog.ui
+++ b/src/editor-properties-dialog.ui
@@ -35,14 +35,31 @@
                 </child>
                 <child>
                   <object class="AdwActionRow">
-                    <property name="title" translatable="yes">Location</property>
-                    <child type="suffix">
-                      <object class="GtkLabel" id="location">
-                        <property name="hexpand">true</property>
-                        <property name="xalign">1</property>
-                        <property name="ellipsize">start</property>
-                        <property name="use-markup">true</property>
-                        <signal name="activate-link" handler="activate_link_cb" swapped="true"/>
+                    <child type="prefix">
+                      <object class="GtkBox">
+                        <property name="orientation">vertical</property>
+                        <property name="spacing">3</property>
+                        <property name="halign">start</property>
+                        <property name="valign">center</property>
+                        <child>
+                          <object class="GtkLabel">
+                            <property name="label" translatable="yes">Location</property>
+                            <property name="hexpand">True</property>
+                            <property name="ellipsize">end</property>
+                            <property name="halign">start</property>
+                            <style>
+                              <class name="subtitle"/>
+                            </style>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkLabel" id="location">
+                            <property name="xalign">1</property>
+                            <property name="ellipsize">start</property>
+                            <property name="use-markup">true</property>
+                            <signal name="activate-link" handler="activate_link_cb" swapped="true"/>
+                          </object>
+                        </child>
                       </object>
                     </child>
                   </object>
