--- a/src/editor-language-dialog.ui
+++ b/src/editor-language-dialog.ui
@@ -25,6 +25,7 @@
                 <property name="margin-bottom">6</property>
                 <property name="child">
                   <object class="GtkEntry" id="search_entry">
+                    <property name="placeholder-text" translatable="yes">Search document types</property>
                     <property name="primary-icon-name">edit-find-symbolic</property>
                   </object>
                 </property>
