--- a/src/editor-properties-dialog.ui
+++ b/src/editor-properties-dialog.ui
@@ -54,12 +54,23 @@
                         </child>
                         <child>
                           <object class="GtkLabel" id="location">
-                            <property name="xalign">1</property>
+                            <property name="xalign">0</property>
                             <property name="ellipsize">start</property>
                             <property name="use-markup">true</property>
                             <signal name="activate-link" handler="activate_link_cb" swapped="true"/>
                           </object>
                         </child>
+                      </object>
+                    </child>
+                    <child type="suffix">
+                      <object class="GtkButton">
+                        <style>
+                          <class name="flat"/>
+                        </style>
+                        <property name="action-name">open-folder</property>
+                        <property name="icon-name">document-open-symbolic</property>
+                        <property name="tooltip-text">Open in File Manager</property>
+                        <property name="valign">center</property>
                       </object>
                     </child>
                   </object>
