properties-dialog: specify has-popup a11y property
Fixes #626

--- a/src/editor-properties-dialog.ui
+++ b/src/editor-properties-dialog.ui
@@ -58,6 +58,9 @@
                             <property name="ellipsize">start</property>
                             <property name="use-markup">true</property>
                             <signal name="activate-link" handler="activate_link_cb" swapped="true"/>
+                            <accessibility>
+                              <property name="has-popup">true</property>
+                            </accessibility>
                           </object>
                         </child>
                       </object>
