editor-page: Hint word completion
Send a hint to the input method that word completion is useful in this
widget. This allows e.g. on screen keyboards to show suggested
completion words while typing.

--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -33,6 +33,7 @@
                         <property name="monospace">true</property>
                         <property name="smart-backspace">true</property>
                         <property name="smart-home-end">before</property>
+                        <property name="input-hints">word-completion</property>
                       </object>
                     </child>
                   </object>
