page: increase right margin
As suggested by Ivan Pravdin

Fixes #605

--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -30,6 +30,7 @@
                         <property name="top-margin">12</property>
                         <property name="bottom-margin">12</property>
                         <property name="left-margin">12</property>
+                        <property name="right-margin">12</property>
                         <property name="monospace">true</property>
                         <property name="smart-backspace">true</property>
                         <property name="smart-home-end">before</property>
