--- a/src/editor-theme-selector.ui
+++ b/src/editor-theme-selector.ui
@@ -16,6 +16,7 @@
             </style>
             <property name="hexpand">true</property>
             <property name="halign">center</property>
+            <property name="group">light</property>
             <property name="focus-on-click">false</property>
             <property name="action-name">settings.style-variant</property>
             <property name="action-target">'follow'</property>
