editor-properties-dialog: Set "Open in File Manager" string as translatable

--- a/src/editor-properties-dialog.ui
+++ b/src/editor-properties-dialog.ui
@@ -72,7 +72,7 @@
                         </style>
                         <property name="action-name">open-folder</property>
                         <property name="icon-name">document-open-symbolic</property>
-                        <property name="tooltip-text">Open in File Manager</property>
+                        <property name="tooltip-text" translatable="yes">Open in File Manager</property>
                         <property name="valign">center</property>
                       </object>
                     </child>
