--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -6,6 +6,7 @@
     <style>
       <class name="org-gnome-TextEditor"/>
     </style>
+    <property name="width-request">360</property>
     <child>
       <object class="AdwToolbarView">
         <property name="top-bar-style">raised</property>
