help: Fix invalid help ID reference

--- a/help/C/edit-undo-redo.page
+++ b/help/C/edit-undo-redo.page
@@ -14,7 +14,7 @@
     </credit>
 
     <link type="guide" xref="index#edit"/>
-    <link type="seealso" xref="edit-draft-folder"/>
+    <link type="seealso" xref="basics-draft-folder"/>
 
     <desc>Fix mistakes made during editing</desc>
     <keywords>undo, redo, discard changes</keywords>
